--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 
 body{
   font-family: "Circular", sans-serif;  
-  background-image: url(background.png);
+  background-image: url(background.jpeg);
 }
 
 .main{
