--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
   background-color: #F5F5F5;
   height: 700px;
   width: 400px;
-  border: 4px solid #01D531;
+  border: 4px solid black;
 }
 
 #pfp, #title{
