--- a/style.css
+++ b/style.css
@@ -8,10 +8,21 @@
   background-image: url(background.jpeg);
   }
 
+.open{
+  position: absolute;
+  width: 100%;
+  height: 1000px;
+  top: 0px;
+  left: 0px;
+  background-image: linear-gradient(45deg, black,black,black,black,black,black, black,black,black,black,black,black,black);
+  animation: revil 2s forwards;
+  animation-timing-function: ease;
+  z-index: 1;
+}
 
   .main {
     border-radius: 50px;
-    position: sticky;
+    margin-top: 0px;
     margin: 0 auto;
     background-color: #F5F5F5;
     height: 710px;
@@ -20,6 +31,7 @@
     border-bottom: 70px solid black;
     border-left: 15px solid black;
     border-right: 15px solid black;
+    z-index: -2;
   }
 
   #pfp,#title {
@@ -165,3 +177,28 @@
     margin-top: 63px;
     color: grey;
   }
+
+@keyframes revil{
+  10%{
+    background-image: linear-gradient(45deg, black,black,black,black,black,black,transparent,black,black,black,black,black,black);
+  }
+  20%{
+    background-image: linear-gradient(65deg,black,black,black,black,transparent,transparent,transparent,black,black,black,black);
+  }
+  30%{
+    background-image: linear-gradient(85deg,black,black,black,transparent,transparent,transparent,transparent,transparent,black,black,black);
+  }
+  40%{
+    background-image: linear-gradient(95deg,black,black,transparent,transparent,transparent,transparent,transparent,transparent,transparent,black,black);
+
+  }
+  50%{
+    background-image: linear-gradient(115deg, black,transparent,transparent,transparent,transparent,transparent,transparent,transparent,transparent,transparent,black);
+  }
+  60%{
+  visibility: hidden;
+  }
+  100%{
+  visibility: hidden;
+  }
+}
